Max code line length 100, true link img, gradients true wrap

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Personal Website</title>
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link   rel="stylesheet" 
+            href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
+            crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/services.css">
+    <link rel="stylesheet" href="./css/experience.css">
+    <link rel="stylesheet" href="./css/works.css">
+    <link rel="stylesheet" href="./css/reviews.css">
+    <link rel="stylesheet" href="./css/contacts.css">
+    <link rel="stylesheet" href="./css/footer.css">
 
 </head>
 
@@ -21,15 +29,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-xs-6">
-                    <img class="header__logo" src="img/logo.png" alt="logo">
+                    <img class="header__logo" src="./img/logo.png" alt="logo">
                 </div>
                 <a href="#" class="col-md-6 col-xs-6 header__nav">
-                    <img src="img/header-menu.png" alt="">
+                    <img src="./img/header-menu.png" alt="">
                 </a>
             </div> <!-- .row -->
             <div class="header__text">
-                <span class="header__title">Paul Lapki<span class="header__title_no_latter_spacing">n</span></span>
-                <span class="header__descr">#User Experience #Music #Creative Direction</span>
+                <span class="header__title">
+                    Paul Lapki<span class="header__title_no_latter_spacing">n</span>
+                </span>
+                <span class="header__descr">
+                    #User Experience #Music #Creative Direction
+                </span>
             </div>
         </div>
     </header>
@@ -41,7 +53,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="about__my-foto">
-                        <img src="/img/man.png" alt="My photo">
+                        <img src="./img/man.png" alt="My photo">
                     </div>
                 </div>
                 <div class="col-md-7">
@@ -51,13 +63,18 @@
                         </h2>
 
                         <p class="about_descr">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                                quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquipex ea commodo
-                                consequat.</p>
-                            <p>Duis autem vel eum iriure dolorin hendrerit in vulputate velit esse molestie consequat,
-                                vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio
-                                dignissim qui blandit praesent luptatum zzril delenit augue duis dolore.</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
+                                nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat 
+                                volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation 
+                                ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.
+                            </p>
+                            <p>
+                                Duis autem vel eum iriure dolorin hendrerit in vulputate velit esse 
+                                molestie consequat, vel illum dolore eu feugiat nulla facilisis at 
+                                vero eros et accumsan et iusto odio dignissim qui blandit praesent 
+                                luptatum zzril delenit augue duis dolore.
+                            </p>
                         </p>
                     </div>
                     <a href="#" class="about__btn">
@@ -67,7 +84,7 @@
             </div>
         </div>
     </section>
-    <!-- .About -->
+    <!-- .About --> 
 
     <!-- Services  -->
     <section class="services">
@@ -81,19 +98,19 @@
                 </h3>
                 <div class="services__items">
                     <div class="services__item services__items_l-blue col-md-3">
-                        <img src="img/monitor.png" alt="">
+                        <img src="./img/monitor.png" alt="">
                         <p>design</p>
                     </div>
                     <div class="services__item services__items_purple col-md-3">
-                        <img src="img/magic_wand.png" alt="">
+                        <img src="./img/magic_wand.png" alt="">
                         <p>development</p>
                     </div>
                     <div class="services__item services__items_d-blue col-md-3">
-                        <img src="img/params.png" alt="">
+                        <img src="./img/params.png" alt="">
                         <p>testing</p>
                     </div>
                     <div class="services__item services__items_red col-md-3">
-                        <img src="img/plane.png" alt="">
+                        <img src="./img/plane.png" alt="">
                         <p>launch</p>
                     </div>
                 </div>
@@ -120,8 +137,9 @@
                             OCT 2013 - june 2014
                         </p>
                         <p class="experience__text">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                            tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+                            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam 
+                            erat volutpat.
                         </p>
 
                         <hr>
@@ -133,8 +151,10 @@
                             OCT 2014 - june 2015
                         </p>
                         <p class="experience__text">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                            tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
+                            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam 
+                            erat volutpat. 
+                        </p>
                     </div>
                 </div>
 
@@ -153,8 +173,9 @@
                             OCT 2013 - june 2014
                         </p>
                         <p class="experience__text">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                            tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
+                            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam 
+                            erat volutpat.
                         </p>
 
                         <hr>
@@ -166,8 +187,9 @@
                             OCT 2014 - Present
                         </p>
                         <p class="experience__text">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                            tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam 
+                            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam 
+                            erat volutpat.
                         </p>
                     </div>
                 </div>
@@ -222,13 +244,14 @@
     <section class="reviews">
         <div class="container">
             <div class="row">
-                <img src="/img/qq.png" alt="qq" class="reviews__qq">
+                <img src="./img/qq.png" alt="qq" class="reviews__qq">
                 <p class="reviews__text">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-                    ullamcorper suscipit lobortis nisl ut aliquipex ea commodo consequat.
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh 
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim 
+                    ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquipex ea commodo consequat.
                 </p>
-                <img src="/img/signature.png" alt="signature" class="reviews__signature"></img>
+                <img src="./img/signature.png" alt="signature" class="reviews__signature"></img>
                 <p class="reviews__name">
                     Deniel Croft
                 </p>
@@ -262,8 +285,8 @@
                             Address
                         </h2>
                         <p class="contacts__text">
-                            Gulshan Sales Office. SA Tower (Level-5), Plot#1, Road#134, Block SE(A), Gulshan-1, Dhaka
-                            1212.
+                            Gulshan Sales Office. SA Tower (Level-5), Plot#1, Road#134, Block SE(A),
+                            Gulshan-1, Dhaka 1212.
                         </p>
                     </div>
 
