--- a/index.html
+++ b/index.html
@@ -87,28 +87,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="services__title">
+                    <h2 class="services__title section__title">
                         My Working Process
                     </h2>
-                    <h3 class="services__subtitle">
+                    <p class="services__description section__description">
                         Hi, i’m Paul Lapkin, Experience Crafter from Canada.
-                    </h3>
+                    </p>
                     <div class="services__items">
-                        <div class="services__item services-item services-item--cyan col-md-3">
-                            <img class="services-item__img" src="./img/monitor.png" alt="">
-                            <p class="services-item__text">design</p>
+                        <div class="services__item services-item services-item--cyan">
+                            <img class="services-item__img" src="./img/monitor.png" alt="Design">
+                            <p class="services-item__text">Design</p>
                         </div>
-                        <div class="services__item services-item services-item--purple col-md-3">
-                            <img class="services-item__img" src="./img/magic_wand.png" alt="">
-                            <p class="services-item__text">development</p>
+                        <div class="services__item services-item services-item--purple">
+                            <img class="services-item__img" src="./img/magic_wand.png" alt="Development">
+                            <p class="services-item__text">Development</p>
                         </div>
-                        <div class="services__item services-item services-item--blue col-md-3">
-                            <img class="services-item__img" src="./img/params.png" alt="">
-                            <p class="services-item__text">testing</p>
+                        <div class="services__item services-item services-item--blue">
+                            <img class="services-item__img" src="./img/params.png" alt="Testing">
+                            <p class="services-item__text">Testing</p>
                         </div>
-                        <div class="services__item services-item services-item--red col-md-3">
-                            <img class="services-item__img" src="./img/plane.png" alt="">
-                            <p class="services-item__text">launch</p>
+                        <div class="services__item services-item services-item--red">
+                            <img class="services-item__img" src="./img/plane.png" alt="Launch">
+                            <p class="services-item__text">Launch</p>
                         </div>
                     </div> <!-- .services__item -->
                 </div>
@@ -140,7 +140,7 @@
                             erat volutpat.
                         </p>
 
-                        <hr>
+                        <hr class="experience__line">
 
                         <h3 class="experience__place">
                             Crazy Design
@@ -199,39 +199,30 @@
     <!-- Works -->
     <section class="works section">
         <div class="container">
-            <div class="row align-items-end">
-                <h2 class="works__title">
-                    My Latest Works
-                </h2>
-                <h3 class="works__subtitle">
-                    Hi, i’m Paul Lapkin, Experience Crafter from Canada.
-                </h3>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="works__title section__title">
+                        My Latest Works
+                    </h2>
+                    <p class="works__description section__description">
+                        Hi, i’m Paul Lapkin, Experience Crafter from Canada.
+                    </p>
 
-                <div class="works__items">
-                    <div class="works__item col-md-3">
+                    <div class="works__items">
                         <img src="./img/work-1.jpg" alt="" class="works__img">
-                    </div>
-                    <div class="works__item col-md-3">
                         <img src="./img/work-2.jpg" alt="" class="works__img">
-                    </div>
-                    <div class="works__item col-md-3">
                         <img src="./img/work-3.jpg" alt="" class="works__img">
-                    </div>
-                    <div class="works__item col-md-3">
                         <img src="./img/work-4.jpg" alt="" class="works__img">
                     </div>
 
-                    <div class="works__item works__item--twin col-md-3">
-                        <img src="./img/work-5.jpg" alt="" class="works__img">
-                    </div>
-                    <div class="works__item col-md-3">
+                    <div class="works__items">
+                        <img src="./img/work-5.jpg" alt="" class="works__img works__img--wide">
                         <img src="./img/work-6.jpg" alt="" class="works__img">
-                    </div>
-                    <div class="works__item col-md-3">
                         <img src="./img/work-7.jpg" alt="" class="works__img">
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <!-- .Works -->
