--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/contacts.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 
 </head>
 
@@ -39,7 +40,9 @@
                             Paul Lapki<span class="header__title--no_latter_spacing">n</span>
                         </span>
                         <p class="header__description">
-                            #User Experience #Music #Creative Direction
+                            <span class="header__hash">#Creative Direction</span>
+                            <span class="header__hash">#User Experience</span>
+                            <span class="header__hash">#Music</span>
                         </p>
                     </div> <!-- .header__text -->
                 </div>
@@ -213,9 +216,7 @@
                         <img src="./img/work-2.jpg" alt="" class="works__img">
                         <img src="./img/work-3.jpg" alt="" class="works__img">
                         <img src="./img/work-4.jpg" alt="" class="works__img">
-                    </div>
 
-                    <div class="works__items">
                         <img src="./img/work-5.jpg" alt="" class="works__img works__img--wide">
                         <img src="./img/work-6.jpg" alt="" class="works__img">
                         <img src="./img/work-7.jpg" alt="" class="works__img">
@@ -231,20 +232,22 @@
     <section class="reviews">
         <div class="container">
             <div class="row">
-                <img src="./img/qq.png" alt="qq" class="reviews__qq">
-                <p class="reviews__text">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
-                    ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                    ut aliquipex ea commodo consequat.
-                </p>
-                <img src="./img/signature.png" alt="signature" class="reviews__signature"></img>
-                <p class="reviews__name">
-                    Deniel Croft
-                </p>
-                <p class="reviews__job">
-                    Creative Designer, Levy
-                </p>
+                <div class="col-md-12">
+                    <img src="./img/qq.png" alt="qq" class="reviews__qq">
+                    <p class="reviews__text">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                        euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+                        ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                        ut aliquipex ea commodo consequat.
+                    </p>
+                    <img src="./img/signature.png" alt="signature" class="reviews__signature"></img>
+                    <p class="reviews__name">
+                        Deniel Croft
+                    </p>
+                    <p class="reviews__job">
+                        Creative Designer, Levy
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -263,7 +266,7 @@
                         <input type="text" placeholder="Email*">
                         <input type="text" placeholder="Subject*">
                         <textarea placeholder="Message*"></textarea>
-                        <a class="contacts__btn" href="">Hire Me!</a>
+                        <a class="contacts__btn btn" href="">Hire Me!</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -293,7 +296,7 @@
                         </h2>
                         <p class="contacts__text">
                             Mail: quicksayed@gmail.com <br>
-                            Website: dribbble.com/alisayed
+                            Website: dribbble.com/yourwebsite
                         </p>
                     </div>
                 </div>
