--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="./css/animation.css">
     <link rel="stylesheet" href="./css/ham.css">
     <link rel="stylesheet" href="./css/menu.css">
-    <script src="./css/menu.js"></script>
 
 </head>
 
@@ -275,10 +274,10 @@
                         <h2 class="contacts__title">
                             Leave a message
                         </h2>
-                        <input type="text" placeholder="Name*">
-                        <input type="text" placeholder="Email*">
-                        <input type="text" placeholder="Subject*">
-                        <textarea placeholder="Message*"></textarea>
+                        <input class="contacts__input" type="text" placeholder="Name*">
+                        <input class="contacts__input" type="text" placeholder="Email*">
+                        <input class="contacts__input" type="text" placeholder="Subject*">
+                        <textarea class="contacts__textarea" placeholder="Message*"></textarea>
                         <a class="contacts__btn btn" href="">Hire Me!</a>
                     </div>
                 </div>
@@ -298,8 +297,8 @@
                             Phone
                         </h2>
                         <p class="contacts__text">
-                            +880 174 037 6995 <br>
-                            +880 191 448 6969
+                            <a href="#" class="contacts__link">+880 174 037 6995</a> <br>
+                            <a href="#" class="contacts__link">+880 191 448 6969</a>
                         </p>
                     </div>
 
@@ -308,8 +307,8 @@
                             Web
                         </h2>
                         <p class="contacts__text">
-                            Mail: quicksayed@gmail.com <br>
-                            Website: dribbble.com/yourwebsite
+                            Mail: <a href="#" class="contacts__link">quicksayed@gmail.com</a> <br>
+                            Website: <a href="#" class="contacts__link">dribbble.com/yourwebsite</a>
                         </p>
                     </div>
                 </div>
